--- a/public/ex1.html
+++ b/public/ex1.html
@@ -52,6 +52,14 @@
     </div>
     </div>
     <div id="map" class="map"></div>
+    <div id="delbar" class="delbar">
+      <table id="table" class="table table-hover">
+        <tr><th>ID</th><th>名称</th><th>操作</th></tr>
+        <tbody>
+          
+        </tbody>
+      </table>
+    </div>
       <div id="popup" class="ol-popup">
       <a href="#" id="popup-closer" class="ol-popup-closer"></a>
       <div id="popup-content"></div>
@@ -59,5 +67,6 @@
     <script src="https://cdn.bootcss.com/jquery/3.2.1/jquery.js"></script>
     <script src="https://cdn.bootcss.com/bootstrap/3.3.5/js/bootstrap.js"></script>
     <script src="js/main.js"></script>
+    <script src="js/delbar.js"></script>
   </body>
 </html>
